demo/components/llamastack/distribution/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    openshift.io/display-name: "LlamaStack API Route"
  labels:
    app.kubernetes.io/name: llamastack-trustyai-fms
    app.kubernetes.io/component: orchestration
    app.kubernetes.io/part-of: llamastack-trustyai-demo
  name: llamastack-trustyai-fms
  namespace: summit-connect-2025
spec:
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: llamastack-trustyai-fms-service
    weight: 100
  wildcardPolicy: None
